service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heimdall
  namespace: heimdall
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: heimdall
