ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: heimdall-ingress
  namespace: heimdall
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: heimdall.home.thejimnicholson.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: heimdall
            port: 
              number: 80
